--- a/composer.json
+++ b/composer.json
@@ -16,6 +16,7 @@
         "laravel/framework": "^7.0",
         "laravel/tinker": "^2.0",
         "laravel/ui": "^2.1",
+        "spatie/laravel-query-builder": "^3.3",
         "spatie/laravel-searchable": "^1.6"
     },
     "require-dev": {
